# lib/db/src/schema/index.ts
@@ -13,3 +13,4 @@ export * from "./workLogs";
 export * from "./shippingRates";
 export * from "./expenses";
 export * from "./customerOrders";
+export * from "./productSourcing";
